Teste de publicacao de atualização

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>PWA 2.1</title>
+    <title>PWA 2.1a</title>
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/colors.css">
@@ -45,11 +45,11 @@
 </head>
 <body  class="grey lighten-5 blue-grey-text">
     <header id="header" class="container grey lighten-4">
-        <h1>My Notes</h1>
+        <h1>My Notes 2.0</h1>
     </header>
 
     <div id="content" class="container grey lighten-4">
-        <p>Adicione aqui suas anotações</p>
+        <p>Adicione aqui suas anotações de teste</p>
         <form id="form-add-note" class="row">
             <input type="text"  placeholder="Anotações..." class="col-2 white">
             <input type="submit" value="+" class="blue-grey white-text col-1">
