--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body  class="grey lighten-5 blue-grey-text">
     <header id="header" class="container grey lighten-4">
-        <h1>My Notes 2.0</h1>
+        <h1>My Notes 2.1a</h1>
     </header>
 
     <div id="content" class="container grey lighten-4">
