--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>PWA 2.1b</title>
+    <title>PWA 2.1c</title>
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/colors.css">
@@ -45,7 +45,7 @@
 </head>
 <body  class="grey lighten-5 blue-grey-text">
     <header id="header" class="container grey lighten-4">
-        <h1>My Notes 2.1b</h1>
+        <h1>My Notes 2.1c</h1>
     </header>
 
     <div id="content" class="container grey lighten-4">
